package baitap_06_06.observer.CA4;

public interface IListenerObserver {
    public void addNewTopic(String s);
    public void updateTopic(int i, String s);
}
